# greg

./: .gitignore  CMakeLists.txt  COPYING.md  README.md
src/: CMakeLists.txt  greg.cpp
templates/: greg.c.in  greg.h.in
